--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "vue": "^3.4.29"
   },
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
     "@vitejs/plugin-vue": "^5.0.5",
-    "vite": "^5.3.1"
+    "eslint": "^9.5.0",
+    "eslint-plugin-vue": "^9.26.0",
+    "globals": "^15.6.0",
+    "vite": "^5.3.1",
+    "vite-plugin-vue-devtools": "^7.3.4"
   }
 }
